# vibecoding-observer

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  diagnostic_signal.yml  feature_request.yml
.github/workflows/: ci.yml  demo-report.yml  publish-pypi.yml
docs/: CONSULTING_OUTPUT_EXAMPLES.md  PROFILE_CONTRACT.md  RELEASE_CHECKLIST.md
scripts/: run_e2e.sh
src/agentlens/: __init__.py  __main__.py  aggregator.py  anomaly.py  checklist.py  cli.py  diagnostic_engine.py  efficiency.py  episode.py  extractor.py  federator.py  git_analyzer.py  ir.py  message_classifier.py  orchestrator.py  project_scanner.py  redactor.py  reporter.py  taxonomy.py
src/agentlens/adapters/: __init__.py  base.py  claude.py  codex.py
src/observer/: __init__.py  __main__.py  aggregator.py  anomaly.py  checklist.py  cli.py  diagnostic_engine.py  efficiency.py  episode.py  event_signals.py  extractor.py  federator.py  git_analyzer.py  ir.py  message_classifier.py  orchestrator.py  project_scanner.py  redactor.py  reporter.py  signal_config.py  taxonomy.py
src/observer/adapters/: base.py  claude.py  codex.py
tests/: conftest.py  test_aggregator.py  test_anomaly.py  test_cli.py  test_diagnostic_engine.py  test_efficiency.py  test_episode.py  test_event_signals.py  test_extractor.py  test_federator.py  test_git_analyzer.py  test_ir.py  test_message_classifier.py  test_profile_contract_docs.py  test_project_scanner.py  test_redactor.py  test_reporter.py  test_scan_scope.py  test_signal_config.py  test_smoke.py
tests/adapters/: test_claude.py  test_codex.py  test_edge_cases.py
tests/fixtures/: claude_sample.jsonl  claude_scope_edges.jsonl  codex_sample.jsonl  codex_scope_edges.jsonl  federator_handoff.json  federator_multi.json  ir_sample.json  observer_custom_closure.yaml
